# paladin-auth

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  HEADER_IMPLEMENTATION.md  IMPLEMENTATION_PLAN_01_CORE.md  IMPLEMENTATION_PLAN_02_CLI.md  IMPLEMENTATION_PLAN_03_TUI.md  IMPLEMENTATION_PLAN_04_GTK.md  Makefile  README.md  deny.toml  index.html
crates/paladin-auth-cli/: Cargo.toml
crates/paladin-auth-cli/src/: cli.rs  clipboard.rs  exec_tui.rs  kdf.rs  lib.rs  main.rs  prompt.rs  select.rs  vault_open.rs
crates/paladin-auth-cli/src/commands/: qr.rs  (+15 more)
crates/paladin-auth-cli/tests/: cli_add.rs  cli_advisory_suppression.rs  cli_destroy.rs  cli_edit.rs  cli_errors_json.rs  cli_exec_tui.rs  cli_export.rs  cli_global_flags.rs  cli_import.rs  cli_init.rs  cli_json_snapshots.rs  cli_list.rs  cli_passphrase.rs  cli_qr.rs  cli_remove_rename.rs  cli_settings.rs  cli_show_peek_copy.rs  packaging_deb_nfpm_manifest_logic.rs  packaging_rpm_nfpm_manifest_logic.rs  thinness.rs
crates/paladin-auth-core/: Cargo.toml  public-api.txt
crates/paladin-auth-core/src/: error.rs  lib.rs  text.rs  vault.rs
crates/paladin-auth-core/tests/: aead_key_cache.rs  display_impls.rs  encrypted_lifecycle.rs  encrypted_save_format.rs  encrypted_tamper.rs  encryption_options.rs  error_display.rs  error_matrix.rs  error_serde.rs  export_encrypted.rs  export_encrypted_fresh_material.rs  export_otpauth_list.rs  export_qr.rs  fault_injection.rs  icon_hint_input.rs  import_aegis.rs  import_detect.rs  import_facade.rs  import_otpauth.rs  import_paladin_auth.rs  import_precheck.rs  import_qr.rs  match_key.rs  no_network.rs  passphrase_transitions.rs  passphrase_transitions_fault.rs  passphrase_transitions_zeroize.rs  policy.rs  proptest_uri_base32.rs  query.rs  secret_audits.rs  send_assertions.rs  settings_grammar.rs  text_formatters.rs  trybuild_audit.rs  ui_contract.rs  validate_label.rs  validation_constants.rs  vault_account_id_errors.rs  vault_account_ops.rs  (+12 more)
crates/paladin-cli/: Cargo.toml
crates/paladin-cli/src/: cli.rs  clipboard.rs  exec_tui.rs  kdf.rs  lib.rs  main.rs  prompt.rs  select.rs  vault_open.rs
crates/paladin-cli/tests/: cli_add.rs  cli_advisory_suppression.rs  cli_destroy.rs  cli_edit.rs  cli_errors_json.rs  cli_exec_tui.rs  cli_export.rs  cli_global_flags.rs  cli_import.rs  cli_init.rs  cli_json_snapshots.rs  cli_list.rs  cli_passphrase.rs  cli_qr.rs  cli_remove_rename.rs  cli_settings.rs  cli_show_peek_copy.rs  packaging_deb_nfpm_manifest_logic.rs  packaging_rpm_nfpm_manifest_logic.rs  thinness.rs
crates/paladin-core/: Cargo.toml  public-api.txt
crates/paladin-core/src/: error.rs  lib.rs  text.rs  ui_contract.rs  vault.rs
crates/paladin-core/tests/: aead_key_cache.rs  display_impls.rs  encrypted_lifecycle.rs  encrypted_save_format.rs  encrypted_tamper.rs  encryption_options.rs  error_display.rs  error_matrix.rs  error_serde.rs  export_encrypted.rs  export_encrypted_fresh_material.rs  export_otpauth_list.rs  export_qr.rs  fault_injection.rs  icon_hint_input.rs  import_aegis.rs  import_detect.rs  import_facade.rs  import_otpauth.rs  import_paladin.rs  import_precheck.rs  import_qr.rs  match_key.rs  no_network.rs  passphrase_transitions.rs  passphrase_transitions_fault.rs  passphrase_transitions_zeroize.rs  policy.rs  proptest_uri_base32.rs  query.rs  secret_audits.rs  send_assertions.rs  settings_grammar.rs  text_formatters.rs  trybuild_audit.rs  ui_contract.rs  validate_label.rs  validation_constants.rs  vault_account_id_errors.rs  vault_account_ops.rs  (+12 more)
crates/paladin-gtk/: Cargo.toml  build.rs
crates/paladin-gtk/data/: org.tamx.Paladin.Gui.desktop  org.tamx.Paladin.Gui.gschema.xml  paladin-gtk.gresource.xml  style.css
crates/paladin-gtk/src/: account_list.rs  account_row.rs  add_account.rs  auto_lock.rs  cli.rs  clipboard.rs  clipboard_clear.rs  column_view.rs  destroy_dialog.rs  edit_dialog.rs  effect_ownership.rs  export_dialog.rs  export_qr_dialog.rs  gsettings.rs  hotp_reveal.rs  icon_resolution.rs  import_dialog.rs  init_dialog.rs  lib.rs  main.rs  otpauth_uri_paste.rs  passphrase_dialog.rs  qr_clipboard.rs  remove_dialog.rs  rename_dialog.rs  row_context_menu.rs  row_item.rs  search.rs  secret_fields.rs  settings.rs  shortcuts_window.rs  startup_error.rs  ticker.rs  toast_queue.rs  unlock_dialog.rs
crates/paladin-gtk/tests/: account_list_logic.rs  account_list_nav_logic.rs  account_row_logic.rs  add_account_logic.rs  app_state_logic.rs  auto_lock_logic.rs  cargo_manifest_workspace_inheritance_logic.rs  ci_desktop_metainfo_validators_logic.rs  ci_packaging_dry_run_logic.rs  cli_global_args.rs  clipboard_clear_logic.rs  clipboard_logic.rs  column_view_logic.rs  desktop_entry_logic.rs  destroy_dialog_logic.rs  edit_dialog_logic.rs  effect_ownership_logic.rs  export_dialog_logic.rs  export_qr_dialog_logic.rs  gresource_manifest_logic.rs  gsettings_logic.rs  gtk_smoke.rs  hotp_reveal_logic.rs  icon_assets_logic.rs  icon_resolution.rs  import_dialog_logic.rs  init_dialog_logic.rs  manual_test_plan_doc.rs  metainfo_logic.rs  no_tokio_source.rs  otpauth_uri_paste_logic.rs  packaging_appimage_build_script_logic.rs  packaging_deb_nfpm_manifest_logic.rs  packaging_flathub_submission_logic.rs  packaging_flatpak_manifest_logic.rs  packaging_reproducible_build_logic.rs  packaging_rpm_nfpm_manifest_logic.rs  packaging_signing_script_logic.rs  passphrase_dialog_logic.rs  qr_clipboard_logic.rs  (+15 more)
crates/paladin-tui/: Cargo.toml
crates/paladin-tui/src/: cli.rs  clipboard.rs  keybindings.rs  lib.rs  main.rs  prompt.rs  search.rs  terminal.rs
crates/paladin-tui/tests/: auto_lock_tests.rs  clipboard_tests.rs  create_vault_tests.rs  destroy_snapshots.rs  destroy_tests.rs  dispatch_tests.rs  effect_tests.rs  help_tests.rs  hotp_reveal_tests.rs  input_tests.rs  no_color_tests.rs  packaging_deb_nfpm_manifest_logic.rs  packaging_rpm_nfpm_manifest_logic.rs  reducer_tests.rs  render_tests.rs  run_tests.rs  search_tests.rs  terminal_tests.rs  thinness.rs  ticker_tests.rs  tui_exec_wrapper.rs  view_snapshots.rs
xtask/: Cargo.toml  dev-tools.toml
xtask/src/: main.rs  man.rs  package.rs
(+681 files in other folders)
