[workspace]
resolver = "2"
members = [
    "crates/paladin-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "AGPL-3.0-or-later"
repository = "https://github.com/FreedomBen/paladin"
homepage = "https://paladin.tamx.org"
description = "Paladin: Rust OTP authenticator (TOTP + HOTP) with CLI, TUI, and GTK front-ends"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
