[workspace]
resolver = "2"
members = [
    "crates/paladin-core",
    "crates/paladin-cli",
    "crates/paladin-tui",
    "crates/paladin-gtk",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.94"
license = "AGPL-3.0-or-later"
repository = "https://github.com/FreedomBen/paladin"
homepage = "https://paladin.tamx.org"
description = "Paladin: Rust OTP authenticator (TOTP + HOTP) with CLI, TUI, and GTK front-ends"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# `PaladinError` is the §5 unified error surface re-exported on the
# §4.7 frozen public API. Boxing every `Result<T, PaladinError>` to
# satisfy this lint would change ~215 call sites, perturb the public
# surface, and add an allocation to every fallible path.
result_large_err = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Compile crypto primitives with optimizations even in dev/test builds.
# Argon2id at the §4.4 ceiling (`m_kib = 1_048_576`, `t = 10`, `p = 4`)
# is exercised in the F.10 round-trip test; without these tweaks the
# test takes minutes in debug mode purely from unoptimized
# Blake2b/AES-NI/SIMD-shaped inner loops.
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.blake2]
opt-level = 3
[profile.dev.package.chacha20]
opt-level = 3
[profile.dev.package.chacha20poly1305]
opt-level = 3
[profile.dev.package.poly1305]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
