[package]
name = "paladin-auth-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["otp", "totp", "hotp", "authenticator", "cli"]
categories = ["command-line-utilities", "authentication"]

[lints]
workspace = true

[features]
default = []
# Test-only hooks. Off in production builds; opt in with
# `cargo test -p paladin-auth-cli --features test-hooks`.
#
# Currently enables:
# * a `PALADIN_AUTH_CLIPBOARD_DRYRUN=1|fail` env-var bypass in the CLI
#   clipboard adapter so process-level tests can exercise `paladin-auth
#   copy` end-to-end without a system clipboard server (and force the
#   `clipboard_write_failed` path), and
# * the transitive `paladin-auth-core/test-fault-injection` feature so
#   process-level tests can drive `save_not_committed` /
#   `save_durability_unconfirmed` via `PALADIN_AUTH_FAULT_INJECT`.
#
# See `docs/IMPLEMENTATION_PLAN_02_CLI.md` "Implementation checklist".
test-hooks = ["paladin-auth-core/test-fault-injection"]

# Both a library and a binary so the workspace `xtask` crate can reach
# the live clap `Command` for man-page rendering via
# `paladin_auth_cli::clap_command()`. The binary entry stays in
# `src/main.rs` and the library surface is intentionally minimal — see
# `src/lib.rs`. Mirrors the lib+bin layout `paladin-auth-tui` and
# `paladin-auth-gtk` already use for the same reason.
[lib]
name = "paladin_auth_cli"
path = "src/lib.rs"

[[bin]]
name = "paladin-auth"
path = "src/main.rs"

[dependencies]
paladin-auth-core = { path = "../paladin-auth-core", version = "0.0.1", features = ["error-serde"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
rpassword = "7.3"
arboard = { version = "3.4", default-features = false }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.40", features = ["json", "redactions"] }
# `rexpect` drives the scripted-`/dev/tty` PTY harness shared by every
# `[PTY]`-tagged integration test (init / passphrase / add / remove /
# import / export). Pinned to a specific minor version so the prompt /
# expect transcript stays stable across transitive bumps, matching the
# pinning convention for `clap` / `rpassword` / `arboard`.
rexpect = "0.6.4"
tempfile = "3"
# Synthetic QR PNG fixture for `add --qr` integration tests. Mirrors
# the dev-only QR encoder used in `paladin-auth-core/tests/import_qr.rs`;
# the thinness guard in `tests/thinness.rs` only scans `[dependencies]`
# and `crates/paladin-auth-cli/src/`, so the encoder lives entirely in the
# test boundary.
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# `rqrr` decodes the QR PNGs `paladin-auth qr --out` writes back to the
# embedded `otpauth://` URI so `cli_qr.rs` can prove the full
# encode/decode round trip without leaking the decoder into the
# runtime crate. `quick-xml` parses the SVG render to confirm
# well-formed XML with the expected `<svg>` root + module child
# elements. Both stay test-side; the thinness guard in
# `tests/thinness.rs` only scans `[dependencies]`.
rqrr = "0.7"
quick-xml = "0.36"
paladin-auth-core = { path = "../paladin-auth-core", version = "0.0.1", features = ["error-serde", "test-fault-injection"] }
