[package]
name = "paladin-auth-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lints]
workspace = true

[features]
default = []
# Test-only fault-injection hook (docs/DESIGN.md §10 / Phase E.7). Off by
# default; production builds never link the hook. When enabled, exposes
# a `Store::for_test_fault_injection` constructor and routes every
# atomic-write site through `storage::fault`, which honors
# `PALADIN_AUTH_FAULT_INJECT=pre_commit|post_commit`. Excluded from the
# stable §4.7 public API.
test-fault-injection = []

# Test-only zeroization witness (docs/DESIGN.md §4.4 / Phase F.14). Off by
# default; production builds compile the witness `observe()` calls
# down to no-ops. When enabled, the `crypto::ZeroizingBytes` Drop impl
# records every observation into a thread-local that integration
# tests drain via `paladin_auth_core::zeroize_witness::take_observations`.
# Also exposes `_testing_replace_encrypted_payload_with_garbage` so
# the AEAD-decrypt-but-bincode-fails path can be exercised end-to-end.
# Excluded from the stable §4.7 public API.
test-zeroize-witness = []

# Opt-in `serde::Serialize` for non-secret projection types
# (docs/DESIGN.md §4.7 / Phase J). Off by default. Stable Phase B
# guarantee: secret-bearing types (`Account`, `Secret`, …) remain
# `!Serialize` even when this feature is enabled — see
# `tests/trybuild/` and `tests/secret_audits.rs`. Phase J wires the
# actual Serialize impls onto `AccountSummary`, `Code`, `ImportReport`,
# `ImportWarning`, `VaultSettings`, etc.
error-serde = []

[dependencies]
# Crypto + memory hygiene
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
getrandom = "0.2"

# Encoding
base32 = "0.5"
url = "2.5"
percent-encoding = "2"
bincode = { version = "2.0", default-features = false, features = ["std", "serde", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

# QR / images (used by importers and the per-account QR export pipeline).
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
qrcode = { version = "0.14", default-features = false, features = ["image", "svg"] }

[dev-dependencies]
proptest = "1"
trybuild = "1"
tempfile = "3"
# Compile-time trait-non-impl assertions for Phase B audit
# (`tests/secret_audits.rs` and the inline VaultSnapshot guard).
static_assertions = "1"
