[package]
name = "paladin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["otp", "totp", "hotp", "authenticator", "cli"]
categories = ["command-line-utilities", "authentication"]

[lints]
workspace = true

[[bin]]
name = "paladin"
path = "src/main.rs"

[dependencies]
paladin-core = { path = "../paladin-core", features = ["error-serde"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
rpassword = "7.3"
arboard = { version = "3.4", default-features = false }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.40", features = ["json"] }
tempfile = "3"
paladin-core = { path = "../paladin-core", features = ["error-serde", "test-fault-injection"] }
