[package]
name = "paladin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
# Crypto + memory hygiene
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
getrandom = "0.2"

# Encoding
base32 = "0.5"
url = "2.5"
bincode = { version = "2.0", default-features = false, features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

# QR / images (used by importers)
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }

[dev-dependencies]
proptest = "1"
trybuild = "1"
tempfile = "3"
