[package]
name = "paladin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lints]
workspace = true

[features]
default = []
# Test-only fault-injection hook (DESIGN.md §10 / Phase E.7). Off by
# default; production builds never link the hook. When enabled, exposes
# a `Store::for_test_fault_injection` constructor and routes every
# atomic-write site through `storage::fault`, which honors
# `PALADIN_FAULT_INJECT=pre_commit|post_commit`. Excluded from the
# stable §4.7 public API.
test-fault-injection = []

# Test-only zeroization witness (DESIGN.md §4.4 / Phase F.14). Off by
# default; production builds compile the witness `observe()` calls
# down to no-ops. When enabled, the `crypto::ZeroizingBytes` Drop impl
# records every observation into a thread-local that integration
# tests drain via `paladin_core::zeroize_witness::take_observations`.
# Also exposes `_testing_replace_encrypted_payload_with_garbage` so
# the AEAD-decrypt-but-bincode-fails path can be exercised end-to-end.
# Excluded from the stable §4.7 public API.
test-zeroize-witness = []

[dependencies]
# Crypto + memory hygiene
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
getrandom = "0.2"

# Encoding
base32 = "0.5"
url = "2.5"
percent-encoding = "2"
bincode = { version = "2.0", default-features = false, features = ["std", "serde", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

# QR / images (used by importers)
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }

[dev-dependencies]
proptest = "1"
trybuild = "1"
tempfile = "3"
# QR fixture generator for `import::qr_image*` tests (Phase I).
qrcode = { version = "0.14", default-features = false, features = ["image"] }
