[package]
name = "paladin-gtk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["otp", "totp", "hotp", "authenticator", "gtk"]
categories = ["gui", "authentication"]

[lints]
workspace = true

# Both a library and a binary so integration tests in `tests/` can
# reach internal modules (search, pure-logic helpers, components) while
# the binary entry stays in `src/main.rs`. Mirrors the §"Crate layout"
# requirement in IMPLEMENTATION_PLAN_04_GTK.md.
[lib]
name = "paladin_gtk"
path = "src/lib.rs"

[[bin]]
name = "paladin-gtk"
path = "src/main.rs"

# Per §"Dependencies (per §9)" of IMPLEMENTATION_PLAN_04_GTK.md, the
# v0.2 GUI binds `relm4`, `gtk4` (>=4.16), `libadwaita` (>=1.6),
# `glib`, `gio`, `gdk4`, plus `paladin-core` and `clap`. These widget-
# stack deps are added in the commit that introduces the first GTK-
# touching module so the scaffold stays buildable on systems without
# GTK dev headers and so each addition has a clear blame trail.
# `paladin-core` is the only crate-level dep here today.
#
# Thinness contract (tests/thinness.rs): this section MUST NOT
# declare any of `argon2`, `chacha20poly1305`, `bincode`, `hmac`,
# `sha1`, `sha2`, `rqrr`, `image`, `getrandom`, `directories`, or
# `url` directly — those belong in `paladin-core`.
[dependencies]
paladin-core = { path = "../paladin-core", version = "0.0.1" }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
# The pure-logic `clipboard_clear` module holds copied clipboard
# bytes in a `Zeroizing<Vec<u8>>` so the captured value zeroes on
# drop (DESIGN §6 / §7 "Pending copied value is zeroized after a
# clear attempt or stale-token drop"). Pinned at the same workspace
# version `paladin-core` and `paladin-tui` use.
zeroize = { version = "1.8", features = ["zeroize_derive"] }
# `init_dialog::prepare_vault_init` wraps the user-entered passphrase
# in a `secrecy::SecretString` before handing it to
# `paladin_core::EncryptionOptions::new`, which is the runtime entry
# point for vault creation from the GUI. The pure-logic add /
# passphrase dialogs land in subsequent commits and use the same
# crate; pinned at the workspace version `paladin-core` uses.
secrecy = "0.10"

[dev-dependencies]
tempfile = "3"
