[package]
name = "paladin-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords = ["otp", "totp", "hotp", "authenticator", "tui"]
categories = ["command-line-utilities", "authentication"]

[lints]
workspace = true

[features]
default = []
# Test-only hooks. Off in production builds; opt in with
# `cargo test -p paladin-tui --features test-hooks`.
# Currently enables:
# * a `PALADIN_CLIPBOARD_DRYRUN=1|fail` env-var bypass in the TUI
#   clipboard adapter so reducer / effect tests can exercise copy →
#   schedule → only-if-unchanged auto-clear without a system clipboard
#   server (and force the `clipboard_write_failed` path), and
# * the transitive `paladin-core/test-fault-injection` feature so
#   reducer / effect-layer integration tests can drive
#   `save_not_committed` / `save_durability_unconfirmed` via
#   `PALADIN_FAULT_INJECT`.
# See `IMPLEMENTATION_PLAN_03_TUI.md` "Implementation checklist".
test-hooks = ["paladin-core/test-fault-injection"]

[[bin]]
name = "paladin-tui"
path = "src/main.rs"

[dependencies]
paladin-core = { path = "../paladin-core", version = "0.0.1" }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# TUI-specific deps pinned to specific minor versions so terminal
# rendering (`ratatui`), key/event handling (`crossterm`), the
# search-bar widget (`tui-input`), and clipboard access (`arboard`) do
# not drift across transitive minor updates. `arboard` is pinned
# explicitly because it sits on the clipboard security boundary
# (copy + image-import paths). `crossterm` is pinned alongside
# `ratatui` so direct input/event handling and the terminal backend
# are tested as a compatible pair. Mirrors the `paladin-core` pinning
# of `getrandom` / `bincode v2` and the `paladin-cli` pinning
# convention.
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"
arboard = "3.4"

[dev-dependencies]
# Pinned for snapshot stability across runs.
insta = { version = "1.40", features = ["json"] }
tempfile = "3"
